--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
   </section>
   <!-- Previous experience details -->
   <section class="section2">
-    <h2 class="sectionTitle">Experience</h2>
+    <h2 class="sectionTitle">Projects & Experience</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
-    <!-- First Title & company details  -->
-    <article class="section2Content">
-      <h2 class="sectionContentTitle">Alice Blakely, PLLC</h2>
-      <h3 class="sectionContentSubTitle">Web Designer | 5/3/2023 – Present</h3>
-		<h3 class="sectionContentSubTitle"><span>Website :</span> <a href="https://www.aliceblakely.com">www.aliceblakely.com</a></h3>
-      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
-    </article>
-	<!-- Second Title & company details  -->
+	<!-- First Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle">Soleil</h2>
       <h3 class="sectionContentSubTitle">Web Designer | 11/23/2025 – Present</h3>
 		<h3 class="sectionContentSubTitle"><span>Website :</span> <a href="https://www.sellingsoleil.com">www.sellingsoleil.com</a></h3>
       <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
     </article>  
+    <!-- Second Title & company details  -->
+    <article class="section2Content">
+      <h2 class="sectionContentTitle">Alice Blakely, PLLC</h2>
+      <h3 class="sectionContentSubTitle">Web Designer | 5/3/2023 – Present</h3>
+		<h3 class="sectionContentSubTitle"><span>Website :</span> <a href="https://www.aliceblakely.com">www.aliceblakely.com</a></h3>
+      <p class="sectionContent"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
+    </article> 
 	<!-- Third Title & company details  -->  
 	<article class="section2Content">
       <h2 class="sectionContentTitle">Blakely Walters Wealth Management, LLC</h2>
